Updated hero image, portfolio title, and portfolio sections

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simiyon Samuel - Portfolio | Computer Science & ML Engineer</title>
-    <meta name="description" content="Portfolio of Simiyon Vinscent Samuel L - Computer Science student specializing in Machine Learning, Full Stack Development, and AI solutions" />
-    <meta name="author" content="Simiyon Vinscent Samuel L" />
+    <title>Sathiya Priyan - Portfolio | Computer Science & ML Engineer</title>
+    <meta name="description" content="Portfolio of Sathiya Priyan - Computer Science student specializing in Machine Learning,Deep Learning and  AI solutions" />
+    <meta name="author" content="Sathiya Priyan" />
 
-    <meta property="og:title" content="Simiyon Samuel - Portfolio | Computer Science & ML Engineer" />
-    <meta property="og:description" content="Portfolio of Simiyon Vinscent Samuel L - Computer Science student specializing in Machine Learning, Full Stack Development, and AI solutions" />
+    <meta property="og:title" content="Sathiya - Portfolio | Computer Science & ML Engineer" />
+    <meta property="og:description" content="Portfolio of Sathiya Priyan - Computer Science student specializing in Machine Learning,Deep Learning and AI solutions" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
